BCNN/logs/BayesianTrain_249056.err
Lmod has detected the following error: The following module(s) are unknown:
"cudnn/8.9.7"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "cudnn/8.9.7"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "<string>", line 1
    import torch; print(f'PyTorch: {torch.__version__}');            print(f'CUDA available: {torch.cuda.is_available()}');            if torch.cuda.is_available(): print(f'GPU: {torch.cuda.get_device_name(0)}')
                                                                                                                                       ^
SyntaxError: invalid syntax
/orfeo/cephfs/home/dssc/bloletti/myenv/lib64/python3.9/site-packages/networkx/utils/backends.py:135: RuntimeWarning: networkx backend defined more than once: nx-loopback
  backends.update(_get_backends("networkx.backends"))
/orfeo/cephfs/home/dssc/bloletti/myenv/lib64/python3.9/site-packages/torch/utils/data/dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.
  warnings.warn(warn_msg)
slurmstepd: error: *** JOB 249056 ON gpu004 CANCELLED AT 2025-08-05T19:00:48 ***
